--- a/style.css
+++ b/style.css
@@ -24,74 +24,43 @@
     display: flex;
     align-items: center;
 }
-.menu-bar .logo{
-    width: 220px;
-    max-width: 100%;
-    height: auto;
-    padding: 0px 100px;
-    padding-right: 0;
-}
-.navlist {
-    display: flex;
-    list-style: none;
-}
-.navlist .active{
-    color: #ad070e;
-}
-.navlist a{
-    display: inline-block;
-    color: black;
-    font-weight: 500;
-    padding: 10px 10px;
-    text-decoration: none;
-    font-size: 20px;
-}
-.navlist a:hover{
-    color: #ad070e;
-}
-
-.btn-box {
+.menu-bar{
     display: flex;
     justify-content: space-between;
-    width: 20px;
-    height: 60px;
-    padding-left: 10px;
-}
-
-.btn-box .btn {
-    font-size: 16px;
-    text-decoration: none;
-    color: white;
-    text-align: center;
-    justify-content: center;
     align-items: center;
-    position: relative;
-    overflow: hidden;
-    display: inline-table;
-    padding: 10px 20px;
-    font-weight: 600;
-    background-color: #ad070e;
-    border-radius: 10px;
-    transition: 0.6s;
-    z-index: 1;
+    padding: 0px 100px;
+    background-color: white;
+    font-family: "Poppins", sans-serif;
 }
-.btn:hover {
+.menu-bar img{
+    height: 100px;
+    width: auto;
+}
+.menu-bar ul{
+    display: flex;
+    gap: 50px;
+    list-style: none;
+    font-weight: semi-bold;
+    font-size: 18px;
+}
+.menu-bar ul a{
+    text-decoration: none;
+    color: #000;
+}
+.menu-bar ul a:hover{
+    color: #ad070e;
+}
+.menu-bar button {
+    background: #ad070e;
+    border: none;
+    padding: 15px 25px;
     color: white;
+    font-family: "Poppins", sans-serif;
+    font-size: 16px;
+    cursor: pointer;
 }
-
-.btn::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: hsl(240, 2%, 10%);
-    width: 0;
-    height: 100%;
-    z-index: -1;
-    transition: .4s;
-}
-.btn:hover::before {
-    width: 100%;
+.menu-bar button:hover{
+    background-color: #024f87;
 }
 
 
@@ -105,14 +74,12 @@
         align-items: center;
         font-size: 15px;
     }
-    .menu-bar .logo{
-        width: 170px;
+    .menu-bar{
+        padding: 0 12px;
+        display: flex;
+        flex-direction: column;
     }
-    .navlist {
-        display: none;
-    }
-    .btn-box{
-        padding-left: 30px;
-        align-items: center;
+    .menu-bar ul{
+        gap: 25px;
     }
 }
