--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 *{
     margin: 0;
     padding: 0;
-    /* font-family: 'Poppins', sans-serif; */
 }
 .top-menu{
     background-color: #024f87;
@@ -11,14 +10,6 @@
     justify-content: space-between;
     color: white;
     font-family: 'Poppins', sans-serif;
-}
-.hero-section{
-    height: 800px;
-    width: 100%;
-    background-image: url(./assets/homebanner.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
 }
 .menu-bar{
     display: flex;
@@ -62,6 +53,103 @@
 .menu-bar button:hover{
     background-color: #024f87;
 }
+.hero-section{
+    height: 800px;
+    width: 100%;
+    background-image: linear-gradient(rgba(51, 51, 143, 0.4),rgba(51, 51, 143, 0.4)),url(./assets/homebanner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+/* .home-content{
+    height: 800px;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(51, 51, 143, 0.4);
+    z-index: 1;
+    display: flex;
+} */
+.hero-content{
+    gap: 25px;
+}
+.hero-content p{
+    display: inline-block;
+    color: #ad070e;
+    font-family: Poppins, sans-serif;
+    background-color: #fff;
+    padding: 3px 25px;
+}
+.hero-content h1{
+    color: #fff;
+    font-family: Poppins,sans-serif;
+    font-size: 65px;
+    line-height: 68px;
+    font-weight: 800;
+}
+.hero-content button{
+    background-color: #ad070e;
+    border: none;
+    padding: 15px 25px;
+    color: #fff;
+    font-family: "Poppins",sans-serif;
+    font-size: 16px;
+    cursor: pointer;
+}
+.hero-content button:hover{
+    background-color: #024f87;
+}
+/* .content span{
+    font-size: 17px;
+    background: aliceblue;
+    width: fit-content;
+    color: #ad070e;
+    margin-top: 70px;
+    margin-left: 150px;
+    display: block;
+    padding: 5px;
+    margin-bottom: 10px;
+    font-weight: semi-bold;
+} */
+.content {
+    padding-left: 20px;
+    padding-top: 30px;
+    max-width: 600px;
+
+}
+.content h1 {
+    color: #fff;
+    font-size: 55px;
+    font-weight: 700;
+    display: block;
+    margin-left: 150px;
+    margin-bottom: 25px;
+    line-height: 1.3;
+}
+.content button {
+    margin-left: 150px;
+    background: #ad070e;
+    border: none;
+    padding: 15px 25px;
+    color: white;
+    font-family: "Poppins", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+}
+.content button:hover{
+    background-color: #024f87;
+}
+.side-img img{
+    max-width: 78%;
+    height: auto;
+    margin-top: 90px;
+}
 
 
 
@@ -81,5 +169,30 @@
     }
     .menu-bar ul{
         gap: 25px;
+    }
+    .content span{
+        margin-left: 0px;
+    }
+    .content h1{
+        margin-left: 0;
+        font-size: 40px;
+        font-weight: 700;
+        text-align: center;
+    }
+    .content button{
+        margin-left: 70px;
+        font-size: 15px;
+    }
+    .side-img img{
+        height: 310px;
+        width: auto;
+        justify-content: center;
+        align-items: center;
+        margin-left: 45px;
+        margin-top: 60px;
+        overflow: hidden;
+    }
+    .home-content{
+        display: block;
     }
 }
