--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=New+Tegomin&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@300&display=swap');
+
 *{
     margin: 0;
     padding: 0;
+    font-family: "Poppins",sans-serif;
 }
 .top-menu{
     background-color: #024f87;
@@ -11,6 +14,74 @@
     color: white;
     font-family: 'Poppins', sans-serif;
 }
+.hero-section{
+    height: 800px;
+    width: 100%;
+    background-image: url(./assets/homebanner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.home-content{
+    height: 800px;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(51, 51, 143, 0.4);
+    z-index: 1;
+    display: flex;
+}
+
+.content span{
+    font-size: 17px;
+    background: aliceblue;
+    width: fit-content;
+    color: #ad070e;
+    margin-top: 70px;
+    margin-left: 150px;
+    display: block;
+    padding: 5px;
+    margin-bottom: 10px;
+    font-weight: semi-bold;
+}
+.content {
+    padding-left: 20px;
+    padding-top: 30px;
+    max-width: 600px;
+
+}
+.content h1 {
+    color: #fff;
+    font-size: 55px;
+    font-weight: 700;
+    display: block;
+    margin-left: 150px;
+    margin-bottom: 25px;
+    line-height: 1.3;
+}
+.content button {
+    margin-left: 150px;
+    background: #ad070e;
+    border: none;
+    padding: 15px 25px;
+    color: white;
+    font-family: "Poppins", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+}
+.content button:hover{
+    background-color: #024f87;
+}
+.side-img img{
+    max-width: 78%;
+    height: auto;
+    margin-top: 90px;
+    border-radius: 20px;
+}
+
+
 .menu-bar{
     display: flex;
     align-items: center;
@@ -53,104 +124,113 @@
 .menu-bar button:hover{
     background-color: #024f87;
 }
-.hero-section{
-    height: 800px;
-    width: 100%;
-    background-image: linear-gradient(rgba(51, 51, 143, 0.4),rgba(51, 51, 143, 0.4)),url(./assets/homebanner.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 50px;
-}
-/* .home-content{
-    height: 800px;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(51, 51, 143, 0.4);
-    z-index: 1;
-    display: flex;
-} */
-.hero-content{
-    gap: 25px;
-}
-.hero-content p{
-    display: inline-block;
-    color: #ad070e;
-    font-family: Poppins, sans-serif;
-    background-color: #fff;
-    padding: 3px 25px;
-}
-.hero-content h1{
-    color: #fff;
-    font-family: Poppins,sans-serif;
-    font-size: 65px;
-    line-height: 68px;
-    font-weight: 800;
-}
-.hero-content button{
-    background-color: #ad070e;
-    border: none;
-    padding: 15px 25px;
-    color: #fff;
-    font-family: "Poppins",sans-serif;
-    font-size: 16px;
-    cursor: pointer;
-}
-.hero-content button:hover{
-    background-color: #024f87;
-}
-/* .content span{
-    font-size: 17px;
-    background: aliceblue;
-    width: fit-content;
-    color: #ad070e;
-    margin-top: 70px;
-    margin-left: 150px;
-    display: block;
-    padding: 5px;
-    margin-bottom: 10px;
-    font-weight: semi-bold;
-} */
-.content {
-    padding-left: 20px;
-    padding-top: 30px;
-    max-width: 600px;
 
+.about-section{
+    display: flex;
 }
-.content h1 {
-    color: #fff;
-    font-size: 55px;
-    font-weight: 700;
-    display: block;
-    margin-left: 150px;
-    margin-bottom: 25px;
-    line-height: 1.3;
+.about-image{
+    background-color: #fff;
+    width: 30%;
+    border: 20px solid #024f87;
+    padding-top: 13px;
+    padding-bottom: 10px;
+    margin: 150px;
+    transition: 0.6s;
+    
 }
-.content button {
-    margin-left: 150px;
+.about-image:hover{
+    border-color: #ad070e;
+}
+.about-image img{
+    width: auto;
+    height: 300px;
+    padding-left: 13px;
+    border-radius: 0 10px 10px 0;
+    margin-left: 0;
+}
+.about-content {
+    margin-top: 100px;
+    margin-left: -50px;
+}
+.about-content span{
+    color: #ad070e;
+    font-size: 18px;
+    font-weight: bold;
+}
+.about-content h1{
+    font-size: 45px;
+    align-items: center;
+    font-weight: 600;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.about-content p{
+    text-align: justify;
+    margin-bottom: 30px;
+    margin-right: 50px;
+    color: #6b6b6b;
+}
+.about-content button {
     background: #ad070e;
     border: none;
     padding: 15px 25px;
     color: white;
     font-family: "Poppins", sans-serif;
     font-size: 16px;
-    font-weight: 500;
     cursor: pointer;
 }
-.content button:hover{
+.about-content button:hover{
     background-color: #024f87;
 }
-.side-img img{
-    max-width: 78%;
-    height: auto;
-    margin-top: 90px;
-}
 
+.course-section{
+    margin: 150px;
+    padding-top: -80px;
+}
+.course-section h1{
+    margin-bottom: 30px;
+    width: 80%;
+    font-size: 45px;
+    font-weight: bolder;
+}
+.about-course{
+    display: flex;
+    gap: 40px;
+}
+.box {
+    width: 300px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+.box img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+.box h3{
+    font-size: 23px;
+    margin-bottom: 14px;
+    font-family: poppins,sans-serif;
+}
+.box p{
+    line-height: 1.8;
+    margin-bottom: 15px;
+    font-size: 15px;
+    color: #6b6b6b;
+}
+.box a{
+    color: #000;
+    text-decoration: none;
+    font-size: 15px;
+}
+.box:hover a,
+.box:hover h3{
+    color: #ad070e;
+}
 
 
 @media screen and (max-width:768px){
